# modern_nlp_project

./: .dockerignore  .env.example  .gitignore  DESIGN_DOC.md  DESIGN_DOC_Version2.md  Dockerfile  PRD-ReviewMind.md  README.md  REPORT_TASK2_MVP.md  REPORT_TASK3_INFRA.md  alembic.ini  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  progress.md  progress.txt  progress_2.md  pyproject.toml  tasks.json  tasks_2.json
.claude/agents/: code-architect.agent.md
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
monitoring/grafana/dashboards/: .gitkeep  database-stats.json  system-health.json  user-activity.json
monitoring/prometheus/: prometheus.yml
scripts/: init_qdrant.py  reset_limit.py  restart.sh  seed_curated_kb.py  seed_dashboard_data.py  seed_test_data.py  test_admin.py  test_cookies.py  test_cookies_debug.py  test_cookies_direct.py  test_ytdlp.py
src/reviewmind/: __init__.py  config.py  main.py  metrics.py
src/reviewmind/api/: dependencies.py  rate_limit.py  router.py  schemas.py
src/reviewmind/bot/: keyboards.py  main.py  middlewares.py
src/reviewmind/cache/: __init__.py  redis.py
src/reviewmind/core/: embeddings.py  llm.py  prompts.py  rag.py  reranker.py
src/reviewmind/db/: models.py  session.py
src/reviewmind/ingestion/: __init__.py  chunker.py  cleaner.py  pipeline.py  sponsor.py  url_detector.py
src/reviewmind/scrapers/: __init__.py  (+6 more)
tests/: conftest.py  test_structure.py
tests/unit/: test_config.py  test_main.py
(+90 files in other folders)
