[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reviewmind"
version = "0.1.0"
description = "ReviewMind — AI-агрегатор обзоров для принятия решений о покупке"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiogram>=3.13.0",
    "openai>=1.50.0",
    "qdrant-client>=1.12.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "flower>=2.0.0",
    "praw>=7.8.0",
    "youtube-transcript-api>=0.6.0",
    "trafilatura>=1.12.0",
    "tavily-python>=0.5.0",
    "langchain-text-splitters>=0.3.0",
    "langdetect>=1.0.9",
    "structlog>=24.4.0",
    "slowapi>=0.1.9",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "yt-dlp>=2026.3.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/reviewmind"]
